--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@islands/headings": "^0.8.2",
     "@islands/prism": "^0.8.0",
     "@nuxt/eslint-config": "^0.1.1",
-    "@pinegrow/iles-module": "^3.0.60",
-    "@pinegrow/tailwindcss-plugin": "^3.0.29",
+    "@pinegrow/iles-module": "^3.0.65",
+    "@pinegrow/tailwindcss-plugin": "^3.0.33",
     "@preact/preset-vite": "^2.5.0",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tailwindcss/forms": "^0.5.3",
@@ -76,5 +76,6 @@
       "vue": "3.3",
       "vite": "4.4"
     }
-  }
+  },
+  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
 }
