--- a/package.json
+++ b/package.json
@@ -23,59 +23,47 @@
     "node": "^14.18 || >= 16.0.0"
   },
   "dependencies": {
-    "@vueuse/core": "^10.0.2",
-    "@vueuse/head": "^2.0.0",
-    "defu": "^6.1.2",
-    "pinia": "^2.1.6",
-    "vee-validate": "^4.11.6"
+    "@vueuse/core": "^11.1.0",
+    "defu": "^6.1.4",
+    "pinia": "^2.2.2",
+    "vee-validate": "^4.13.2"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.51",
+    "@iconify/json": "^2.2.253",
     "@islands/excerpt": "^0.9.0",
     "@islands/feed": "^0.8.1",
     "@islands/headings": "^0.8.2",
     "@islands/prism": "^0.8.0",
-    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxt/eslint-config": "^0.5.7",
     "@pinegrow/iles-module": "^3.0.65",
     "@pinegrow/tailwindcss-plugin": "^3.0.33",
-    "@preact/preset-vite": "^2.5.0",
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^20.5.0",
-    "@unocss/preset-icons": "^0.57.2",
-    "@vue/devtools": "^6.5.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "iles": "^0.9.5",
+    "@preact/preset-vite": "^2.9.1",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^22.7.4",
+    "@unocss/preset-icons": "^0.62.4",
+    "@vue/devtools": "^7.4.6",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "iles": "^0.10.0-beta.1",
     "npm-run-all": "^4.1.5",
-    "ofetch": "^1.0.1",
-    "postcss": "^8.4.22",
-    "preact": "^10.15.1",
-    "preact-render-to-string": "^6.1.0",
-    "prettier": "^2.8.4",
-    "rehype-external-links": "^2.1.0",
+    "ofetch": "^1.4.0",
+    "postcss": "^8.4.47",
+    "preact": "^10.24.1",
+    "preact-render-to-string": "^6.5.11",
+    "prettier": "^3.3.3",
+    "rehype-external-links": "^3.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
-    "solid-js": "^1.7.6",
-    "svelte": "^4.0.0",
-    "tailwindcss": "^3.3.1",
-    "typescript": "^5.0",
-    "unocss": "^0.57.2",
-    "unplugin-auto-import": "^0.16.6",
-    "vite-plugin-vue-devtools": "^7.3.6",
-    "vue-tsc": "^1.2"
+    "solid-js": "^1.9.1",
+    "svelte": "^4.2.19",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6",
+    "unocss": "^0.62.4",
+    "unplugin-auto-import": "^0.18.3",
+    "vite-plugin-vue-devtools": "^7.4.6",
+    "vue-tsc": "^2.1"
   },
-  "web-types": "web-types.json",
-  "overrides": {
-    "vue": "3.3",
-    "vite": "4.4"
-  },
-  "pnpm": {
-    "overrides": {
-      "vue": "3.3",
-      "vite": "4.4"
-    }
-  },
-  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
+  "web-types": "web-types.json"
 }
