--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.7.4",
+    "@unhead/schema-org": "^1.11.15",
     "@unocss/preset-icons": "^0.62.4",
     "@vue/devtools": "^7.4.6",
     "autoprefixer": "^10.4.20",
