Updates, navbar refactor and head-and-meta.ts, eslint flat config

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "natures-delight-with-iles-tailwindcss",
   "version": "0.0.0",
-  "homepage": "https://natures-delight-with-iles-tailwindcss.netlify.app",
   "type": "module",
+  "homepage": "https://natures-delight-with-iles-tailwindcss.netlify.app",
   "repository": {
     "type": "git",
     "url": "https://github.com/pinegrow/natures-delight-with-iles-tailwindcss.git"
@@ -14,57 +14,63 @@
     "build": "iles build",
     "preview": "iles preview --open --port 5050",
     "typecheck": "vue-tsc --noEmit",
-    "vue-devtools": "vue-devtools",
     "lint": "npm run lint:fix && npm run format",
-    "lint:fix": "eslint --fix --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts ./ --ignore-path .gitignore",
-    "format": "prettier --write \"**/*.{vue,js,jsx,cjs,mjs,ts,tsx,cts,mts,html,css,md,mdx,json}\" !public --ignore-path .gitignore"
+    "lint:fix": "eslint --fix ./",
+    "format": "prettier --write \"**/*.{html,vue,svelte,astro,js,jsx,cjs,mjs,ts,tsx,cts,mts,css,md,mdx,json}\" !public --ignore-path .gitignore"
   },
   "engines": {
     "node": "^14.18 || >= 16.0.0"
   },
   "dependencies": {
-    "@vueuse/core": "^11.1.0",
+    "@vueuse/core": "^12.4.0",
     "defu": "^6.1.4",
-    "pinia": "^2.2.2",
-    "vee-validate": "^4.13.2"
+    "pinia": "^2.3.0",
+    "vee-validate": "^4.15.0"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.253",
+    "@iconify/json": "^2.2.294",
     "@islands/excerpt": "^0.9.0",
     "@islands/feed": "^0.8.1",
     "@islands/headings": "^0.8.2",
     "@islands/prism": "^0.8.0",
-    "@nuxt/eslint-config": "^0.5.7",
-    "@pinegrow/iles-module": "^3.0.68",
+    "@nuxt/eslint-config": "^0.7.5",
+    "@pinegrow/iles-module": "^3.0.69",
     "@pinegrow/tailwindcss-plugin": "^3.0.35",
-    "@preact/preset-vite": "^2.9.1",
+    "@preact/preset-vite": "^2.9.4",
     "@sveltejs/vite-plugin-svelte": "^4.0.4",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^22.7.4",
-    "@unhead/schema-org": "^1.11.15",
-    "@unocss/preset-icons": "^0.62.4",
-    "@vue/devtools": "^7.4.6",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^22.10.6",
+    "@unhead/schema-org": "^1.11.16",
+    "@unocss/preset-icons": "^65.4.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
     "iles": "^0.10.0-beta.1",
     "npm-run-all": "^4.1.5",
-    "ofetch": "^1.4.0",
-    "postcss": "^8.4.47",
-    "preact": "^10.24.1",
-    "preact-render-to-string": "^6.5.11",
-    "prettier": "^3.3.3",
+    "ofetch": "^1.4.1",
+    "postcss": "^8.5.0",
+    "preact": "^10.25.4",
+    "preact-render-to-string": "^6.5.13",
+    "prettier": "^3.4.2",
     "rehype-external-links": "^3.0.0",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "solid-js": "^1.9.1",
-    "svelte": "^5.17.3",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6",
-    "unocss": "^0.62.4",
-    "unplugin-auto-import": "^0.18.3",
-    "vite-plugin-vue-devtools": "^7.4.6",
-    "vue-tsc": "^2.1"
+    "rollup-plugin-visualizer": "^5.14.0",
+    "solid-js": "^1.9.4",
+    "svelte": "^5.17.4",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7",
+    "unocss": "^65.4.0",
+    "unplugin-auto-import": "^19.0.0",
+    "vite-plugin-vue-devtools": "^7.7.0",
+    "vue-tsc": "^2.2"
+  },
+  "overrides": {
+    "@sveltejs/vite-plugin-svelte": "^4.0.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "@sveltejs/vite-plugin-svelte": "^4.0.4"
+    }
   },
   "web-types": "web-types.json"
 }
